finishing up main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Me + Julia</title>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,200,300,500,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet"type="text/css" href="style.css">
+
 </head>
 
 <body>
@@ -12,7 +14,63 @@
 
 		<div class = "logo">(logo)</div>
 
-		<section class = "about"> Welcome to Me + Julia! My name is Simone and I think baking is rad. I also think Julia Child is my spirit animal. I bought <em>Baking with Julia</em> back in college from a second-hand bookstore and it has since become my baking bible. Me + Julia is a way to document my baking adventure through all of her cookbook. That's right, ALL (and let's be honest, it'll help hold me accountable to actually doing this). Come along and Bon Appetit!</section>
+		<section class = "about"> Welcome to Me + Julia! My name is Simone and I think baking is rad. I also think Julia Child is my spirit animal. I bought <em>Baking with Julia</em> back in college from a second-hand bookstore and it has since become my baking bible. Me + Julia is a way to document my baking adventure through her entire cookbook. That's right, the ENTIRE cookbook (and let's be honest, this site will help to hold me accountable). Come along, and Bon Appetit!
+		</section>
+
+		<section>
+			<div class = "break">//
+			</div>
+		</section>
+
+		<section class = "picture_grid">
+			<div class = "section_group_1">
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+			</div>
+
+			<div class = "section_group_2">
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+			</div>
+
+			<div class = "section_group_3">
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+				<div class = "col span_1_of_3">
+					Picture goes here
+				</div>
+			</div>
+		</section>
 
 
-</div>
+
+		<footer> 
+			<div class = "break">//
+			</div>
+			<span>Questions?</span>
+			<span><a href="https://www.facebook.com/simone.vijgen">Facebook</a> | 
+				<a href="https://instagram.com/simomo23/">Instagram</a> 
+			</span>
+		</footer>
+
+	</div>
+</body>
+</html>
