linked recipe one page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section class = "picture_grid">
 			<div class = "section_group_1">
 				<div class = "col span_1_of_3">
-					Picture goes here
+					<a href="recipe_one.html">Picture one</a>
 				</div>
 				<div class = "col span_1_of_3">
 					Picture goes here
@@ -63,12 +63,11 @@
 
 
 		<footer> 
-			<div class = "break">//
+			<div class = "second_break">//
 			</div>
-			<span>Questions?</span>
-			<span><a href="https://www.facebook.com/simone.vijgen">Facebook</a> | 
+			<div class = "footer">Questions? <a href="https://www.facebook.com/simone.vijgen">Facebook</a> | 
 				<a href="https://instagram.com/simomo23/">Instagram</a> 
-			</span>
+			</div>
 		</footer>
 
 	</div>
