added ingredients aside

--- a/recipe_one.html
+++ b/recipe_one.html
@@ -8,10 +8,39 @@
 
 <body>
 	<div class= "wrapper">
+		<div class= "header_background">
+			<h1>Me + Julia</h1>
+			<div class = "logo">(logo)</div>
+		</div>
 
-		<h1>Me + Julia</h1>
+	<aside>Ingredients:
+		<ul>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+			<li>___________</li>
+		</ul>
+	</aside>
 
-		<div class = "logo">(logo)</div>
+
+<section class = "recipe">
+	<div class = "recipe_name">Recipe Name</div>
+
+
+
+
+</section>
+
+
+
+
+
 
 <footer> 
 			<div class = "second_break">//
