finished outline for recipe page template

--- a/recipe_one.html
+++ b/recipe_one.html
@@ -9,10 +9,10 @@
 <body>
 	<div class= "wrapper">
 		<div class= "header_background">
-			<h1>Me + Julia</h1>
+			<h1><a href= "index.html"> Me + Julia</a></h1>
 			<div class = "logo">(logo)</div>
 		</div>
-
+	
 	<aside>Ingredients:
 		<ul>
 			<li>___________</li>
@@ -29,26 +29,27 @@
 	</aside>
 
 
-<section class = "recipe">
-	<div class = "recipe_name">Recipe Name</div>
+	<section class = "recipe">
+		<div class = "recipe_name">Recipe Name</div>
+		<br>
+		<div class = "description_one">This is the first section where I will describe what the recipe is of and any background story or tips that Julia provides in the cookbook. I will give any pointers for what went well for me and/or give suggestions on what I might improve on in the future.</div>
+		<br>
+		<div class = "picture_one">Picture One Goes Here</div>
+		<br>
+		<div class = "description_two">Here I will list out the steps, in paragraph form. Again, listing out tips and tricks for what worked well for me.</div>
+		<br>
+		<div class = "picture_two">Picture Two Goes Here</div>
+		<br>
+		<div class = "picture_three">Picture Three Goes Here</div>
+	</section>
 
-
-
-
-</section>
-
-
-
-
-
-
-<footer> 
+	<footer class = "recipe_pages"> 
 			<div class = "second_break">//
 			</div>
 			<div class = "footer">Questions? <a href="https://www.facebook.com/simone.vijgen">Facebook</a> | 
 				<a href="https://instagram.com/simomo23/">Instagram</a> 
 			</div>
-		</footer>
+	</footer>
 	</div>
 </body>
 
