--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<div class = "logo">(logo)</div>
 
-		<section class = "about"> Welcome to Me + Julia! My name is Simone and I think baking is rad. I also think Julia Child is my spirit animal. I bought <em>Baking with Julia</em> back in college from a second-hand bookstore and it has since become my baking bible. Me + Julia is a way to document my baking adventure through her entire cookbook. That's right, the ENTIRE cookbook (and let's be honest, this site will help to hold me accountable). Come along, and Bon Appetit!
+		<section class = "about"> Welcome to Me + Julia! My name is Simone and I think baking is rad. I also think Julia Child is my spirit animal. I bought <em>Baking with Julia</em> back in college from a second-hand bookstore and it has since become my baking bible. Me + Julia is a way to document my baking adventure through her entire cookbook. That's right, the ENTIRE cookbook (and let's be honest, this site will help to hold me accountable). Wish me luck - Bon Appetit!
 		</section>
 
 		<section>
