--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 		<section class = "picture_grid">
 			<div class = "section_group_1">
 				<div class = "col span_1_of_3">
-					<a href="recipe_one.html">Picture one</a>
+					<a href="recipe_one.html">
+					<img src="CWPB_onetest.jpeg">
+					</a>
 				</div>
 				<div class = "col span_1_of_3">
 					Picture goes here
