--- a/recipe_one.html
+++ b/recipe_one.html
@@ -34,7 +34,7 @@
 		<br>
 		<div class = "description_one">This is the first section where I will describe what the recipe is of and any background story or tips that Julia provides in the cookbook. I will give any pointers for what went well for me and/or give suggestions on what I might improve on in the future.</div>
 		<br>
-		<div class = "picture_one">Picture One Goes Here</div>
+		<div class = "picture_one"><img src="CWPB_two.jpeg"></div>
 		<br>
 		<div class = "description_two">Here I will list out the steps, in paragraph form. Again, listing out tips and tricks for what worked well for me.</div>
 		<br>
